--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  dio: ^5.4.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
@@ -51,12 +51,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.8
-  custom_lint: ^0.6.2
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  freezed: ^2.4.7
-  json_serializable: ^6.7.1
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.3
+  riverpod_generator: ^2.6.4
+  riverpod_lint: ^2.6.4
+  freezed: ^2.5.8
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
